# exec_assistant

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COST_ESTIMATE.md  Makefile  NOTIFICATION_SERVICE_REVIEW.md  PHASE1_SUMMARY.md  PHASE2_DESIGN.md  PHASE2_SUMMARY.md  PHASE3_IMPLEMENTATION_ROADMAP.md  PHASE3_PLAN.md  PHASE_1_5_DEPLOYMENT.md  PREP_TRIGGER_HANDLER_REVIEW.md  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: black-box-design-expert.md  pulumi-infrastructure-manager.md  python-dev-expert.md
.devcontainer/: devcontainer.json
config/: agents.yaml  meeting_types.yaml
docs/: AWS_INFRASTRUCTURE.md  DAY_1_COMPLETE.md  IMPLEMENTATION_PLAN.md  MEETING_COORDINATOR_DESIGN.md  PHASE_1.5_ROADMAP.md  SLACK_BOT_DESIGN.md  TESTING.md  TESTING_WORKFLOW_SUMMARY.md  WEB_CHAT_ARCHITECTURE.md
infrastructure/: .gitignore  DEPLOYMENT_CHECKLIST.md  IAM_PERMISSIONS.md  INFRASTRUCTURE_SUMMARY.md  PHASE3_SPRINT3_DEPLOYMENT.md  Pulumi.yaml  README.md  __init__.py  __main__.py  api.py  calendar_monitor.py  prep_notification.py  requirements.txt  storage.py
scripts/: test_agent_local.py  test_lambda_locally.py  validate_deployment.py
src/exec_assistant/: __init__.py
src/exec_assistant/agents/: __init__.py  meeting_coordinator.py
src/exec_assistant/interfaces/: __init__.py  agent_handler.py  auth_handler.py  calendar_handler.py  slack_bot.py
src/exec_assistant/shared/: __init__.py  auth.py  calendar.py  config.py  jwt_handler.py  logging.py  meeting_classifier.py  models.py  notification_service.py
src/exec_assistant/workflows/: __init__.py  calendar_monitor.py  prep_trigger_handler.py
test_events/: README.md  auth_token.json  chat_message.json  chat_message_with_session.json
tests/: __init__.py  conftest.py  test_auth.py  test_bug_fixes.py  test_calendar.py  test_calendar_handler.py  test_calendar_monitor.py  test_config.py  test_dynamodb_validation.py  test_jwt_handler.py  test_logging.py  test_meeting_classifier.py  test_meeting_coordinator.py  test_models.py  test_notification_service.py  test_prep_trigger_handler.py  test_slack_bot.py  test_utils.py
ui/: app.js  error.html  index.html
